--- a/state_sim_interface/CMakeLists.txt
+++ b/state_sim_interface/CMakeLists.txt
@@ -7,14 +7,16 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# find_package(geometry_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+
 rosidl_generate_interfaces(${PROJECT_NAME}
-  "srv/ArmyStateMsg.srv"
-  # DEPENDENCIES geometry_msgs # Add packages that above messages depend on
+  "srv/ArmyStateService.srv"
+  DEPENDENCIES geometry_msgs # Add packages that above messages depend on
 )
 
 if(BUILD_TESTING)
