--- a/state_sim_interface/CMakeLists.txt
+++ b/state_sim_interface/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/ArmyStateService.srv"
+  "msg/PoseRequestPub.msg"
   DEPENDENCIES geometry_msgs # Add packages that above messages depend on
 )
 
